[gd_scene load_steps=3 format=3 uid="uid://6i2u86bkcnlx"]

[ext_resource type="Script" uid="uid://djqwabboopa37" path="res://scenes/ui/HospitalScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="HospitalScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.05, 0.05, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/StatusPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/StatusPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üè• HASTANE"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/StatusPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/StatusPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "You are recovering..."
horizontal_alignment = 1

[node name="ReasonLabel" type="Label" parent="CenterContainer/StatusPanel/VBox"]
layout_mode = 2
text = "Reason: Severe PvP Loss"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/StatusPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CountdownLabel" type="Label" parent="CenterContainer/StatusPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 28
text = "Release in: 00:00:00"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/StatusPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="EarlyReleasePanel" type="VBoxContainer" parent="CenterContainer/StatusPanel/VBox"]
layout_mode = 2

[node name="GemCostLabel" type="Label" parent="CenterContainer/StatusPanel/VBox/EarlyReleasePanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Early Release: 30 Gems"
horizontal_alignment = 1

[node name="PayButton" type="Button" parent="CenterContainer/StatusPanel/VBox/EarlyReleasePanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "üíé Erken √áƒ±kƒ±≈ü (Gem √ñde)"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "‚óÄ Geri"
